调整菜单接口